log
Wed, May 14, 2025  8:53:23 AM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:59:20: error: invalid initializer
   int sudo[9][9] = n->sudo;
                    ^
3f0e54c
